# cvc5-BatchSolver

./: LICENSE  README.md  cvc5_solver.py  pyproject.toml  requirements.txt  todo.txt
input_output/: reader.py  writer.py
results/: results_cvc5.csv
src/cvc5_batchsolver/: __init__.py  cvc5_solver.py
src/cvc5_batchsolver/input_output/: writer.py
tests/: solutions.txt
tests/1var/2deg/: cat.smt2  dog.smt2  elephant.smt2  enigma.smt2  house.smt2  rabbit.smt2  squirrel.smt2  theater.smt2
tests/1var/3deg/: clown.smt2  heart.smt2  home.smt2  nostalgia.smt2  plate.smt2  rose.smt2  terminate.smt2
tests/2var/2deg/: faint.smt2  machine.smt2  small.smt2  truck.smt2  unusual.smt2
tests/2var/3deg/: email.smt2  forget.smt2  inertia.smt2  moon.smt2  oblong.smt2  touch.smt2  waste.smt2
tests/3var/2deg/: beast.smt2  doctor.smt2  train.smt2  vampire.smt2
tests/3var/3deg/: bar.smt2  motor.smt2  professor.smt2  robot.smt2  tank.smt2  titanium.smt2  western.smt2
